--- a/src/components/AutocompleteSearch/AutocompleteSearch.css
+++ b/src/components/AutocompleteSearch/AutocompleteSearch.css
@@ -1,5 +1,5 @@
 .autocomplete-container {
-  width: 100%;
+  width: 1000px;
   max-width: 64rem;
   margin: 0 auto;
   padding: 1rem;
