--- a/src/index.css
+++ b/src/index.css
@@ -11,16 +11,18 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
+  /* display: flex; */
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  
+  display: flex;
+  justify-content: center;
+   
 }
 
 button {
